# dataproduct-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  action.yml  dataproduct-kit.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  data_product_example.yml  feature_request.yml
.github/workflows/: ci.yml  dataproduct-kit-dogfood.yml  publish.yml  release-smoke.yml
docs/: ci-adoption.md  ci-rollout.md  compatibility.md  finding-codes.md  from-csv.md  json-output.md  publishing.md  readiness-profiles.md  release-checklist.md  suppressions.md  usage-scenarios.md
docs/superpowers/plans/: 2026-06-18-dataproduct-kit-v1-production-readiness.md  2026-06-18-v05-ci-hardening.md
docs/superpowers/specs/: 2026-06-18-dataproduct-kit-v1-production-readiness-design.md
examples/fail/broken-metric/: dataproduct.yaml  policy.yaml  semantic.yaml
examples/fail/policy-gap/: contract.yaml  dataproduct.yaml  policy.yaml
examples/fail/schema-drift/: contract.yaml  dataproduct.yaml  semantic.yaml
examples/fail/stale-data/: dataproduct.yaml  policy.yaml
examples/pass/finance-revenue/: contract.yaml  dataproduct.yaml  policy.yaml  semantic.yaml
scripts/: smoke-install.sh  verify.sh
src/dataproduct_kit/: __init__.py  ci.py  cli.py  config.py  context.py  csv_scaffold.py  dbt_scaffold.py  doctor.py  finding_codes.py  loader.py  models.py  profiles.py  reports.py  schemas.py  source_locations.py  standards.py  suite.py  templates.py  validators.py
tests/: conftest.py  test_ci.py  test_cli.py  test_config.py  test_context.py  test_csv_scaffold.py  test_dbt_scaffold.py  test_doctor.py  test_examples.py  test_profiles.py  test_release_readiness.py  test_reports_and_standards.py  test_validation.py
(+16 files in other folders)
